@@ -2,7 +2,7 @@
 ##
 ## Process this file with automake to create Makefile.in
 ##
-## Copyright (C) 2014 Red Hat, Inc.
+## Copyright (C) 2014, 2015 Red Hat, Inc.
 ## This file is part of elfutils.
 ##
 ## This file is free software; you can redistribute it and/or modify
@@ -40,7 +40,7 @@ pkginclude_HEADERS = libdwelf.h
 noinst_HEADERS = libdwelfP.h
 
 libdwelf_a_SOURCES = dwelf_elf_gnu_debuglink.c dwelf_dwarf_gnu_debugaltlink.c \
-	dwelf_elf_gnu_build_id.c
+		     dwelf_elf_gnu_build_id.c dwelf_scn_gnu_compressed_size.c
 
 libdwelf = $(libdw)
 
